Package: R.rsp
==============

Version: 0.19.6-1 [2015-01-18]
o Added Unix shell (and Windows batch) scripts 'rsource', 'rfile'
  and 'rcat' moved to system.file("exec", package="R.rsp").  These
  scripts are convenient wrappers that uses Rscript internally.
o BUG FIX: isCapableOf() for "asciidoc" and "pandoc" would given an
  error (instead of FALSE) if the binary was not found.


Version: 0.19.6 [2014-10-18]
o Now the LaTeX processor returned by findProcess() for RspFileProduct
  (with content type application/x-tex or application/x-latex) will add
  the directory of the source file to the TEXINPUTS.
o Added RSP preprocessing directives <%@ifdef ...%> and <%@ifndef ...%>
  which are shorts for <@if test="exists" ...%> and it's negated form.
o ROBUSTNESS: Added more tests for the RSP language.
o CLEANUP/ROBUSTNESS: As part of deprecating the old R.rsp (<= 0.8.2) API,
  the following steps have been taken:
  - S3 methods are no longer exported. Only the generics.
  - Methods flush() and stop() part of the old RSP API no longer mask
    corresponding functions of the 'base' package.
  - Several methods including those in the built-in Tcl httpd server
    no longer assumes that the R.rsp package is attached. They are also
    prepared for not all methods being exported (which may happen in
    a future release).


Version: 0.19.5 [2014-10-03]
o CLEANUP: The 'tex' and 'md' vignette engines no longer generates
  a tangle script.
o DOCUMENTATION: Added vignette 'R packages: LaTeX vignettes'.


Version: 0.19.4 [2014-09-03]
o ROBUSTNESS: Now RSP preprocessing directive <%@if name="<name>" ...%>
  does a better jobs of locating RSP variables with a smaller risk of
  finding other R objects.


Version: 0.19.3 [2014-08-29]
o DOCUMENTATION: Updated the 'Dynamic document creation using RSP'
  package vignette.
o Added Unix shell (and Windows batch) scripts 'rsource', 'rfile'
  and 'rcat' to system.file("bin", package="R.rsp").  These scripts